# JoJo_Stands_Viewer

./: Cargo.toml
assets/data/: jojo-stands.csv
assets/datasets/: jojo-stands.csv
assets/locales/: en.ftl  ru.ftl
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/entities/: mod.rs  rank.rs  stand.rs
crates/core/src/models/: mod.rs  rank.rs  stand.rs
crates/core/src/repositories/: mod.rs  stand.rs
crates/core/src/services/: mod.rs  stand.rs
crates/core/src/types/: mod.rs  rank.rs
crates/di/: Cargo.toml
crates/di/src/: app_container.rs  dependency_injector.rs  di.rs  lib.rs
crates/example_app/: Cargo.toml
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/dtos/: mod.rs  rank.rs  stand.rs
crates/infrastructure/src/file/: mod.rs  path_manager.rs
crates/infrastructure/src/mappers/: mapper.rs  mod.rs  rank.rs  stand.rs
crates/infrastructure/src/repositories/: csv_stand.rs  mod.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs  locale.rs  theme.rs
crates/ui/src/components/: button.rs  mod.rs
crates/ui/src/features/: mod.rs
crates/ui/src/features/main_screen/: entity.rs  mod.rs  state.rs  view.rs
crates/ui/src/features/main_screen/components/: mod.rs  sidebar.rs  stand_info.rs
crates/ui/src/features/main_window/: entity.rs  mod.rs  view.rs
crates/ui/src/shared/: button.rs  mod.rs
crates/ui/src/themes/: theme.rs
crates/utils/: Cargo.toml
docs/: doc.md
(+5 files in other folders)
