[workspace]
members = ["crates/app", "crates/core", "crates/di", "crates/infrastructure", "crates/ui"]
default-members = ["crates/app"]
resolver = "2"

[workspace.dependencies]
example_app = { path = "crates/app" }

core = { path = "crates/core" }
di = { path = "crates/di" }
infrastructure = { path = "crates/infrastructure" }
ui = { path = "crates/ui" }

gpui = "0.2.2"
gpui-component = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3.1"
anyhow = "1.0"
fluent-templates = "0.14" 
unic-langid = "0.9"